Fix follow block z-index

--- a/css/lw-omega.styles.css
+++ b/css/lw-omega.styles.css
@@ -432,6 +432,19 @@ ul.tabs.tabs--primary li > a.active {
   border: 1px solid #484e46;
 }
 
+input[type="submit"] {
+  font-size: 11px;
+  text-align: center;
+  width: auto;
+  line-height: 24px;
+  height: 24px;
+  cursor: pointer;
+  margin: 0px !important;
+  padding: 0px 20px !important;
+  background: #e9cb54;
+  border: 1px solid #ac8c00;
+}
+
 #webform-ajax-wrapper-65 {
   display: flex;
 }
@@ -650,6 +663,7 @@ ul.tabs.tabs--primary li > a.active {
 .l-region--branding {
   overflow: auto;
   width: 100%;
+  z-index: 1;
 }
 @media (min-width: 605px) {
   .l-region--branding {
